--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,13 @@
 
+@import "tailwindcss";
 *{
     margin: 0;
     padding: 0;
 }
 body{
     box-sizing: border-box;
-    font-family: "Open Sans";
     font-style: normal;
+    font-family: 'Montserrat',sans-serif;
     font-weight: 400;
-}
-@font-face{
-  font-family: "RubikScribble";
-  src:local("RubikScribble-Regular"),
-  url('./assets/fonts/Rubik_Scribble/RubikScribble-Regular.ttf') 
+    
 }
