--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,8 @@ body{
     font-style: normal;
     font-family: 'Montserrat',sans-serif;
     font-weight: 400;
-    
+
+}
+img{
+  margin-top: -96px;
 }
