--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,32 @@ body{
     font-weight: 400;
 
 }
-img{
+/* img{
   margin-top: -96px;
 }
+.onScroll-Animation {
+  background: linear-gradient(to right, #22c55e, #22c55e) no-repeat, white;
+  background-size: 2% 100%;
+  animation: proceed 15s linear forwards;
+ 
+}
+.carimg{
+animation: move 15s linear forwards;
+}
+@keyframes move {
+  0%{
+margin-left: 0px;
+  }
+  100%{
+margin-left: 1500px;
+  }
+}
+/* .animation{
+  
+} */
+
+/* @keyframes proceed {
+  to {
+    background-size: 100% 100%;
+  }
+} */ 
