successfully maked the logic

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,56 @@ body{
     font-weight: 400;
 
 }
+.hero{
+  transition: 1s ease;
+  animation: fade-in duration timing-function delay iteration-count direction fill-mode;
+}
+.box2,.box1{
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  text-align: center;
+  align-items: center;
+  border: none;
+  border-radius: 20px;
+  justify-content: space-evenly;
+ 
+
+}
+.box-1,.box-2,.box-3,.box-4{
+   transition: 1s ease-in-out;
+   border-radius: 20px;
+   height: 200px;
+   width: 200px;
+}
+@media (min-width:768px) {
+  .box-1,.box-2,.box-3,.box-4{
+   transition: 1s ease-in-out;
+   border-radius: 20px;
+   height: 120px;
+   width: 250px;
+}
+}
+.box2 h1{
+  font-size: 30px;
+  font-weight: 800px;
+
+}
+.box2 p{
+  font-size: 20px;
+  font-weight: 800px;
+  
+}
+.box1 h1{
+  font-size: 30px;
+  font-weight: 800px;
+
+}
+.box1 p{
+  font-size: 20px;
+  font-weight: 800px;
+  
+}
 /* img{
   margin-top: -96px;
 }
